Add mainnet contracts

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Rabbit chase"
+      content="Mint Rabbit NFTs and Win BNB Prizes on BSC"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rabbit chase</title>
+    <title>Rabbit Catch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
